# DataSink

./: LICENSE  README.md  cli.py  core.py  datasync_log.txt  fuzz_core.py  pyproject.toml  requirements.txt
DataSink.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
corpus/: crash-4a1abde620ddba177a8c691860a71e1abf84b037
corpus/archive/: crash-71f69a2c93a629df5d6a0d430cb9175c60363005
datasink/: cli.py  core.py  gui.py  gui.txt
tests/: test_cli.py  test_cli.txt  test_core.py  test_core.txt  test_gui.py  test_gui.txt
