# pyproject.toml
# This file configures your Python project.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# This tells setuptools to automatically find your package(s)
# in the current directory.
where = ["."]

[project]
name = "DataSink"
version = "2.0.0" # Bumping version for the new structure
description = "A backup and transfer utility for Windows and Linux."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

# Update the entry points to look inside the 'datasink' package
[project.scripts]
datasink = "datasink.cli:main"

[project.gui-scripts]
datasink-gui = "datasink.gui:launch_app"
